# bioat

./: .buildinfo  .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  QuickStart.html  README.md  Untitled.ipynb  _config.yml  bioat.html  bioat.lib.html  bmatFilter.py  bmatFilterFitHebo.py  contents.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: QuickStart.doctree  bioat.doctree  bioat.lib.doctree  contents.doctree  environment.pickle  index.doctree  modules.doctree
.github/_workflows_bak/: macos.yml  windows.yml
.github/workflows/: bioat_pytest.yml  deploy-docs.yml  linux.yml  macos.yml  python-package.yml  ubuntu.yml  windows.yml
Bam_Tools/: remove_clip.py
Bed_Tools/: bed_to_art.py  mpmat-to-art-V06.TALE.py
Bed_to_Mpmat/: README.md  bed_to_mpmat.py
Mutation_Region_Counter/: 20201203_DetectSeq_PD_old-sites_mut-count_max_distance_tabl.ipynb  20210104_Plot_Mutation-Region-Count.R  20210112_DetectSeq_PD_new-sites_mut-count_max_distance_tabl.ipynb
TargetSeq_Tools/: .tags
TargetSeq_Tools/temp/: get_compare_table_for_detect_seq_and_target_seq.py  get_fasta.py  parse_pysam.py  test.bed  test.sh  test_temp.bed
Test_Resources/: test_sorted.bam.bai
__back/art/: plot_art.py
__back/bam/: remove_clip.py
__back/bed/: bed_to_art.py  bed_to_mpmat.py
__back/target_seq/: get_target-seq_info.py_bak  loader.py
__back/target_seq/temp/: get_compare_table_for_detect_seq_and_target_seq.py  get_detect-seq_info.py  get_fasta.py  parse_pysam.py  test.fa
_modules/: index.html
_modules/bioat/: bamtools.html  bedtools.html  cli.html  crisprtools.html  devtools.html  exceptions.html  fastxtools.html  foldtools.html  hictools.html  logger.html  metatools.html  searchtools.html  systemtools.html  tabletools.html  target_seq.html
_modules/bioat/lib/: libalignment.html  libcircos.html  libcolor.html  libcrispr.html  libdataclasses.html  libfastx.html  libjgi.html  libpandas.html  libpatentseq.html  libpath.html  libpdb.html  libplot.html  libsnakemake.html  libspider.html
_sources/: contents.rst.txt
_static/: documentation_options.js
data/: HK4-AOut-1.ref.upper.fa.fai  random_l-180_n-100_hg38_minus-test.fa  test_sorted.mpileup.info.tsv
data/bam/: test_sorted.mpileup
data/circos/: tutorial.ipynb
data/fasta/: test_fastx_plot_length_distribution.fa  test_genome.fa
data/hic/: SRR400264_01_100000000_raw.matrix  SRR400264_01_100000000_raw_abs.bed  SRR400264_01_100000_raw.matrix  SRR400264_01_100000_raw_abs.bed  SRR400264_01_1000_raw.matrix
data/pdb/: EGFP_4EUL.fa  EGFP_4EUL_cut1.fa  EGFP_4EUL_cut2.fa  EGFP_4EUL_ref.fa  SpCas9.fa  dCas9.fa  dCas9_rm_HNH.fa  delta3CE.fa  delta4CE.fa  deltaHNH.fa  deltaREC2.fa  deltaREC3.fa  deltaRuvC.fa
data/poisson_res/: DetectSeq_ATP8-DddA11_REP-1_vs_ctrl_Vector-merge_hg38.select.pvalue_table  DetectSeq_ATP8-DddA6_REP-1_vs_ctrl_Vector-merge_hg38.select.pvalue_table  test_vs_ctrl_test_ctrl.select.pvalue_table
data/structures/: 5xwy_standard.fa
data/target_seq/: HK4-AOut-1.ref.upper.fa
docs/: QuickStart.md  QuickStart.rst  bioat.lib.rst  bioat.rst  conf.py  contents.rst  demo_circos-plot.ipynb  demo_foldtools_show_ref_cut.ipynb  index.md  index.rst  modules.rst  requirements.txt  test_plot_pdb.ipynb
scripts/: publish.sh  set_env.sh  toml2yaml.py
src/biat/: __init__.py  _version.py
src/biat/console/commands/: application.py  bam_tools.py
src/biat/system/: disk_usage.py
src/biat/target_seq/: get_target-seq_info.py
src/biat/target_seq/temp/: get_detect-seq_info.py
src/bioat/: __init__.py  __main__.py  _cli.py  _dev_tools.py  _loader.py  _meta.py  _version.py  about.py  bam.py  bamtools.py  bedtools.py  cli.py  crisprtools.py  detect_seq.py  devtools.py  exceptions.py  fastx.py  fastxtools.py  foldtools.py  genome.py  hic.py  hictools.py  logger.py  metatools.py  mgi.py  mgitools.py  searchtools.py  system.py  systemtools.py  table.py  tabletools.py  target_seq.py  targeted_deep_sequencing.py  version.py
src/bioat/console/commands/: __init__.py  application.py  bam_tools.py  bed_tools.py
src/bioat/fasta/: <stdout>  _cli.py  _filter_n.py
src/bioat/lib/: 3Dmol-min.js  _dev_tools.py  libalignment.py  libcircos.py  libcolor.py  libcrispr.py  libdataclasses.py  libdetect_seq.py  libfastx.py  libjgi.py  libjupyter.py  libpandas.py  libpatentseq.py  libpath.py  libpdb.py  libphylo.py  libplot.py  libsnakemake.py  libspider.py  libsystem.py
src/bioat/lib/circos/: hg38_chromosome_length.csv  hg38_cytoBand.csv  mm10_chromosome_length.csv  mm10_cytoBand.csv
src/bioat/lib/circos/hg38/: chromosome_length_hg38.csv  cytoBand_hg38.csv
src/bioat/lib/patentseq/: index.css  psf-ui.4.0-overide.min.css
src/bioat/system/: deal_mgi_md5.py
src/bioat/table/: merge_table.py
src/bioat/target_seq/temp/: test.align.tsv
tests/: __init__.py  _pytest_meta.py  settings.py  test___main__.py  test__meta.py  test_about.py  test_bam.py  test_bamtools.py  test_bedtools.py  test_biat.py  test_bioat.py  test_bioat_table.py  test_cli.py  test_cli_about.py  test_cli_bam.py  test_cli_list.py  test_cli_version.py  test_crisprtools.py  test_devtools.py  test_exceptions.py  test_fastxtools.py  test_foldtools.py  test_lib_libalignment.py  test_lib_libpdb.py  test_list.py  test_meta.py  test_metatools.py  test_searchtools.py  test_systemtools.py  test_tabletools.py  test_target_seq.py  test_version.py
tests/test_lib/: __init__.py  test_libalignment.py  test_libpdb.py  test_libplot.py
